--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "cra-template": "1.2.0",
     "firebase": "^11.1.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
